<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_3sdp"
    android:background="@drawable/blackglassglossy"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:theme="@style/Theme.App">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImage"
        android:layout_width="@dimen/rankImage"
        android:layout_height="@dimen/rankImage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:contentDescription="@string/todo"
        android:src="@color/white"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.AllRounded" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@id/userImage"
        android:layout_toStartOf="@+id/userScore"
        android:layout_toEndOf="@id/userImage"
        android:fontFamily="sans-serif-light"
        android:gravity="start|center"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:text="@string/playeName"
        android:textColor="#B5B5B5"
        android:textSize="@dimen/_12ssp" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/userCoins"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignBottom="@+id/userImage"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_toStartOf="@+id/userScore"
        android:layout_toEndOf="@id/userImage"
        android:fontFamily="sans-serif-light"
        android:gravity="start|top"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:text="$ 000,000"
        android:textColor="#D19D00"
        android:textSize="@dimen/_14ssp"
        app:ticker_animationDuration="2500"
        app:ticker_defaultCharacterList="number"
        app:ticker_defaultPreferredScrollingDirection="any" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userScore"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/rankImage"
        android:layout_alignTop="@id/userImage"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/blackglassglossy"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="sans-serif-light"
        android:gravity="end|center"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/nill"
        android:textColor="#D5D5D5"
        android:textSize="@dimen/_12ssp" />
</RelativeLayout>

