<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/Black"
    android:onClick="joinRoomWindowExit"
    tools:context=".MainHomeScreen">
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTintMode="src_atop"
        android:src="@drawable/smoke_swirl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/joinRoomFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:background="#1B1A1A"
        android:elevation="50dp"
        android:forceHasOverlappingRendering="false"
        android:foregroundTintMode="multiply"
        android:hapticFeedbackEnabled="true"
        android:onClick="joinRoomWindowExit"
        android:soundEffectsEnabled="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeUserNameview">

        <EditText
            android:id="@+id/roomIDInput"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@color/font_yellow"
            android:cursorVisible="true"
            android:digits="0123456789"
            android:ems="5"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/hinRoomID"
            android:importantForAutofill="no"
            android:inputType="number"
            android:shadowColor="#636161"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="55sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:background="@color/Black"
            android:backgroundTint="@color/Black"
            android:backgroundTintMode="add"
            android:fadingEdge="horizontal|vertical"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="joinRoomCreated"
            android:text="@string/joinRoom"
            android:textAllCaps="true"
            android:textColor="@color/font_yellow"
            android:textSize="36sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomIDInput"
            app:strokeColor="@color/font_yellow"
            app:strokeWidth="6dp" />

    </FrameLayout>

    <TextView
        android:id="@+id/welcomeUserNameview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nosifer"
        android:textAlignment="center"
        android:textColor="@color/font_yellow"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="serif"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textColor="@color/font_yellow"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:background="@color/Black"
        android:backgroundTint="@color/Black"
        android:backgroundTintMode="add"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="sans-serif-smallcaps"
        android:hapticFeedbackEnabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="createRoom"
        android:text="@string/createRoom"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/font_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeUserNameview"
        app:strokeColor="@color/font_yellow"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="@color/Black"
        android:backgroundTint="@color/Black"
        android:backgroundTintMode="add"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="sans-serif-smallcaps"
        android:hapticFeedbackEnabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="joinRoomWindowOpen"
        android:text="@string/joinRoom"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/font_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomButton"
        app:strokeColor="@color/font_yellow"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonInvite"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="@color/Black"
        android:backgroundTint="@color/Black"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif-smallcaps"
        android:hapticFeedbackEnabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="inviteFriends"
        android:text="@string/invite"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/font_yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:strokeColor="@color/font_yellow"
        app:strokeWidth="3dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="sans-serif-smallcaps"
        android:hapticFeedbackEnabled="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="developerCredits"
        android:text="@string/developerCredits"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/font_yellow"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/font_yellow"
        app:strokeWidth="2dp"
        android:background="@color/Black"
        android:backgroundTint="@color/Black"
        android:backgroundTintMode="add"/>

</androidx.constraintlayout.widget.ConstraintLayout>